
CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2017

Bug fixes and other improvements

	- Fix illegal memory access after free when closing fluid (valgrind
	  reports "Invalid read of size 4"), see also STR #3427.
	- Fix crash when closing fluid with Fl_Table (STR #3427).
	- Fix ignored buffer pre-allocation (requestedSize) in Fl_Text_Buffer.
	  See fltk.general "Fl_Text_Buffer constructor bug" on Dec 5, 2016.
	- Fix Fl_Browser background and text color parsing (STR #3376).
	- Fix Windows CreateDC/DeleteDC mismatch (STR #3373).
	- Updated bundled configure scripts config.guess and config.sub.
	- Fix configure --enable-cairo --enable-cairoext,
	  see report in fltk.general:
	  https://groups.google.com/forum/#!topic/fltkgeneral/x80qQ6wt0s4
	- Fix for MacOS timer implementation (STR #3387).
	- Fix for drop-to-FLTK-widget under MSWindows when the desktop is
	  rescaled (STR #3390).
	- Added support for MacOS 10.13 "High Sierra". Subwindows don't
	  move correctly under 10.13 without this fix.


CHANGES IN FLTK 1.3.4-1					RELEASED: Nov 15 2016

Bug fixes and other improvements

	- Fix Windows IDE solutions VisualC2008 and VisualC2010 to
	  build properly if the FLTK source directory is located
	  in a path that contains spaces.
	
	Note: this is a source tar file update that is only necessary
	if you build one of the above mentioned Visual Studio IDE
	solutions in a path with spaces. Nothing else changed, no
	documentation updates.


CHANGES IN FLTK 1.3.4					RELEASED: Nov 11 2016

Bug fixes and other improvements

	- Fix test/native-filechooser help display artifact (STR #3349).
	- MacOS: fix a crash when closing a fullscreen window.
	- Accept empty Fl_Pixmap in Fl_RGB_Image c'tor (STR #3348).
	- MacOS: fix drawing error when a window containing a hidden subwindow 
	  is changed to fullscreen (error visible with the tabs test program).
	- MacOS: fix possible crash when enabling fullscreen in test/scroll.
	- Add a snapshot of known STR's and RFE's (KNOWN_BUGS.html).
