@@ -3,6 +3,10 @@ CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2017
 
 Bug fixes and other improvements
 
+	- Windows/CMake: Add missing definition of WIN32 for Windows builds.
+	  This seems to be necessary for VS2017 and other compilers that
+	  don't #define WIN32, but FLTK relies on this preprocessor macro.
+	  Autoconf/configure and bundled IDE files #define WIN32 as well.
 	- Fix illegal memory access after free when closing fluid (valgrind
 	  reports "Invalid read of size 4"), see also STR #3427.
 	- Fix crash when closing fluid with Fl_Table (STR #3427).
